--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://sohankalburgi2:WLiVobJlxtHz1ec6@cluster0.yzhy1xa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET_KEY="sohan122334"
+PORT=5000
